--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "parse-tibia-analyser",
   "version": "1.0.1",
-  "description": "Parse analysers content from game Tibia",
+  "description": "Parse analysers contents from game Tibia",
   "author": "Ademilson Ferreira Pinto",
   "license": "MIT",
   "main": "./lib/index.js",
