--- a/package.json
+++ b/package.json
@@ -17,22 +17,22 @@
   },
   "scripts": {
     "dev": "mocha -w src",
-    "docs": "typedoc --options .typedoc.json",
+    "docs": "typedoc --options .typedoc.json src/index.ts",
     "test": "mocha src",
     "coverage": "nyc mocha src",
     "build": "tsc --build tsconfig-build.json"
   },
   "devDependencies": {
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
-    "@types/chai": "^4.2.12",
-    "@types/mocha": "^8.0.3",
+    "@types/chai": "^4.2.14",
+    "@types/mocha": "^8.2.0",
     "@types/node": "^14.11.8",
     "chai": "^4.2.0",
-    "mocha": "^8.1.3",
+    "mocha": "^8.2.1",
     "nyc": "^15.1.0",
     "source-map-support": "^0.5.19",
-    "ts-node": "^9.0.0",
-    "typedoc": "next",
-    "typescript": "^4.0.3"
+    "ts-node": "^9.1.1",
+    "typedoc": "^0.20.0",
+    "typescript": "^4.1.3"
   }
 }
