--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "parse-tibia-analyser",
-  "version": "1.1.1",
-  "description": "Parse analysers contents from game Tibia",
+  "version": "2.0.0-dev",
+  "description": "Parse generated text contents from game Tibia",
   "author": "Ademilson Ferreira Pinto",
   "license": "MIT",
   "main": "./lib/index.js",
@@ -16,23 +16,31 @@
     "url": "git+https://github.com/ademilsonfp/parse-tibia-analyser.git"
   },
   "scripts": {
-    "dev": "mocha -w src",
+    "dev": "ava --watch",
     "docs": "typedoc --options .typedoc.json src/index.ts",
-    "test": "mocha src",
-    "coverage": "nyc mocha src",
+    "test": "ava --verbose",
+    "coverage": "nyc ava --verbose",
     "build": "tsc --build tsconfig-build.json"
   },
   "devDependencies": {
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
-    "@types/chai": "^4.2.14",
-    "@types/mocha": "^8.2.0",
     "@types/node": "^14.11.8",
-    "chai": "^4.2.0",
-    "mocha": "^8.2.1",
+    "ava": "^3.15.0",
     "nyc": "^15.1.0",
     "source-map-support": "^0.5.19",
     "ts-node": "^9.1.1",
     "typedoc": "^0.20.0",
     "typescript": "^4.1.3"
+  },
+  "ava": {
+    "extensions": [
+      "ts"
+    ],
+    "files": [
+      "test/**/*.spec.ts"
+    ],
+    "require": [
+      "ts-node/register/transpile-only"
+    ]
   }
 }
