--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "coverage": "nyc ava --verbose",
     "build": "tsc --build tsconfig-build.json"
   },
+  "dependencies": {
+    "make-error": "^1.3.6"
+  },
   "devDependencies": {
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
     "@types/node": "^14.11.8",
