--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
     "typedoc": "^0.20.0",
     "typescript": "^4.1.3"
   },
+  "dependencies": {
+    "make-error": "^1.3.6"
+  },
   "ava": {
     "extensions": [
       "ts"
